# superunicode

./: .gitignore  .memory.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  WHAT-TO-DO.md
superunicode/: CMakeLists.txt  README.md
superunicode/include/superunicode/: sucs_compat.h  sucs_plane.h  sucs_types.h  superunicode.h  sutf.h
superunicode/src/: sucs_string.c  sutf_decode.c  sutf_encode.c
superunicode/tests/: CMakeLists.txt  test_sucs_planes.c  test_sutf.c
superunicode/tools/: sucs_inspector.c
superunicode_extended/: CMakeLists.txt  README.md
superunicode_extended/include/: esutf.h  extsucs_types.h  extsutf_fixed.h  vsutf.h
superunicode_extended/src/: esutf.c  extsutf_fixed.c  vsutf.c
superunicode_extended/tests/: test_extsutf_all.c
sutf/: CMakeLists.txt  README.md
sutf/include/: sucs_mode.h  sucs_types.h  sutf.h  sutf16.h  sutf2.h  sutf4.h  sutf8.h
sutf/src/: sucs_mode.c  sutf16.c  sutf2.c  sutf4.c  sutf8.c
sutf/tests/: test_sutf_all.c
